--- a/src/formulas.html
+++ b/src/formulas.html
@@ -82,15 +82,8 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <h5 class="dropdown-header">Basic Geometry</h5>
                         <a href="perimeter.html" class="dropdown-item"><i class="bi bi-bounding-box"></i> Perimeter Calculator</a>
+                        <a href="area.html" class="dropdown-item"><i class="bi bi-grid-3x3"></i> Area Calculator</a>
                         <a href="diagpolyg.html" class="dropdown-item"><i class="bi bi-slash-square"></i> Diagonal Calculator</a>
-                        <div class="dropdown-divider"></div>
-                        <h5 class="dropdown-header">Area Calculator</h5>
-                        <a href="atriangle.html" class="dropdown-item"><i class="bi bi-triangle"></i> Triangle</a>
-                        <a href="aequtri.html" class="dropdown-item"><i class="bi bi-triangle"></i> Equilateral Triangle</a>
-                        <a href="acircle.html" class="dropdown-item"><i class="bi bi-circle"></i> Circle</a>
-                        <a href="apara.html" class="dropdown-item"><i class="bi bi-file"></i> Parallelogram</a>
-                        <a href="asquare.html" class="dropdown-item"><i class="bi bi-square"></i> Square</a>
-                        <a href="atrapezoid.html" class="dropdown-item"><i class="bi bi-pentagon"></i> Trapezoid</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
