--- a/src/perimeter.html
+++ b/src/perimeter.html
@@ -6,7 +6,7 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare - Perimeter</title>
+    <title>MathFlare - Perimeter Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
     <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
@@ -84,15 +84,8 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <h5 class="dropdown-header">Basic Geometry</h5>
                         <a href="perimeter.html" class="dropdown-item aactive"><i class="bi bi-bounding-box"></i> Perimeter Calculator</a>
+                        <a href="area.html" class="dropdown-item"><i class="bi bi-grid-3x3"></i> Area Calculator</a>
                         <a href="diagpolyg.html" class="dropdown-item"><i class="bi bi-slash-square"></i> Diagonal Calculator</a>
-                        <div class="dropdown-divider"></div>
-                        <h5 class="dropdown-header">Area Calculator</h5>
-                        <a href="atriangle.html" class="dropdown-item"><i class="bi bi-triangle"></i> Triangle</a>
-                        <a href="aequtri.html" class="dropdown-item"><i class="bi bi-triangle"></i> Equilateral Triangle</a>
-                        <a href="acircle.html" class="dropdown-item"><i class="bi bi-circle"></i> Circle</a>
-                        <a href="apara.html" class="dropdown-item"><i class="bi bi-file"></i> Parallelogram</a>
-                        <a href="asquare.html" class="dropdown-item"><i class="bi bi-square"></i> Square</a>
-                        <a href="atrapezoid.html" class="dropdown-item"><i class="bi bi-pentagon"></i> Trapezoid</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
