--- a/src/area.html
+++ b/src/area.html
@@ -184,7 +184,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=square+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=square+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
@@ -207,7 +207,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=parallelogram+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=parallelogram+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
@@ -230,7 +230,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=triangle+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=triangle+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
@@ -249,7 +249,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=equilateral+triangle+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=equilateral+triangle+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
@@ -268,7 +268,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=circle+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=circle+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
@@ -295,7 +295,7 @@
             </div>
             <br>
             <div class="my-4">
-                <a href="https://www.google.com/search?q=circle+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+                <a href="https://www.google.com/search?q=circle+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
             </div>
     </div>
     <!-- SCRIPTS START -->
