--- a/src/prightside.html
+++ b/src/prightside.html
@@ -164,8 +164,8 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Right Side</h1>
-        <p class="text-warning"><i class="bi bi-exclamation-triangle"></i> JavaScript has been acting up a bit. Proceed at your own risk!</p>
+        <h1 class="text-white d-inline-flex">Right Side</h1>
+        <p class="text-warning"><i class="bi bi-exclamation-triangle"></i> Currently under development</p>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
         <h4 class="text-white">Enter the triangle's hypotenuse</h4>
