--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div> -->
     <div class="dead-center">
-        <h1 class="text-white fs-1">MathFlare</span></h1>
+        <h1 class="text-white fs-1"><img src="Assets/icon.png" style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</span></h1>
         <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
         <div class="d-inline-flex">
             <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-1"><i class="bi bi-github"></i> GitHub</a>
