--- a/src/perimeter.html
+++ b/src/perimeter.html
@@ -169,7 +169,7 @@
         <h1 class="text-white">Perimeter Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Square</h4>
+        <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
         <div class="center-form">
             <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.01" />
         </div>
@@ -188,7 +188,7 @@
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Parallelogram</h4>
+        <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
         <div class="center-form">
             <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" />
         </div>
@@ -211,7 +211,7 @@
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Triangle</h4>
+        <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
         <div class="center-form">
             <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.01" />
         </div>
@@ -238,7 +238,7 @@
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Equilateral Triangle</h4>
+        <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
         <div class="center-form">
             <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.01" />
         </div>
@@ -257,7 +257,7 @@
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Circle</h4>
+        <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
         <div class="center-form">
             <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" />
         </div>
@@ -276,7 +276,7 @@
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Polygon</h4>
+        <h4 class="text-white"><i class="bi bi-heptagon"></i> Polygon</h4>
         <h5>enter the sides with commas as shown in the example</h5>
         <div class="center-form">
             <textarea id="sides" placeholder="eg. 1,3,8,12.4,2" class="form-control message" required></textarea>
