--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -186,11 +186,8 @@
             <p class="text-success" id="output"></p>
         </div>
         <br />
-        <div>
-            <b class="text-white show-formula"><u>show formula</u></b>
-            <p id="formula" class="text-white">
-                hypotenuse&#178; &#61; (first leg)&#178; &#43; (other leg)&#178;
-            </p>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=find+hypotenuse" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
