--- a/calc.html
+++ b/calc.html
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
         <a class="navbar-brand" href="https://www.mathflare.tk">MathFlare</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -63,7 +63,7 @@
                     <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Contact
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -82,7 +82,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Geometry
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -94,7 +94,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Trigognometry
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -107,7 +107,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Unit Converter
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -124,7 +124,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Account
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -141,7 +141,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Algebra
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -205,7 +205,7 @@
     <script src="dist/OnSignOut.js"></script>
     <script>
         $(() => {
-            $('[data-toggle="tooltip"]').tooltip()
+            $('[data-bs-toggle="tooltip"]').tooltip()
         })
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
