--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
     <!-- SCRIPTS -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script data-ad-client="ca-pub-1524024547471266" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- POPPER.JS ONLY FOR TOOLPITS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
     <script>
@@ -54,7 +52,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
         <a class="navbar-brand" href="https://www.mathflare.tk">MathFlare</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -63,7 +61,7 @@
                     <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Contact
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -82,7 +80,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Geometry
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -94,7 +92,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Trigognometry
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -107,7 +105,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Unit Converter
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -124,7 +122,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Account
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -141,7 +139,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Algebra
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
@@ -183,8 +181,8 @@
             <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-success m-1"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
         </div>
         <div>
-            <a href="https://www.binance.com/en/trade/DOGE_USDT" target="_blank" rel="noopener" class="btn btn-info m-1 text-white" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-currency-bitcoin"></i> Buy DogeCoin</a>
-            <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-1" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i> Instagram</a>
+            <a href="https://www.binance.com/en/trade/DOGE_USDT" target="_blank" rel="noopener" class="btn btn-info m-1 text-white" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sponsored"><i class="bi bi-currency-bitcoin"></i> Buy DogeCoin</a>
+            <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i> Instagram</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
@@ -208,7 +206,7 @@
     </script>
     <script>
         $(() => {
-            $('[data-toggle="tooltip"]').tooltip()
+            $('[data-bs-toggle="tooltip"]').tooltip()
         })
     </script>
     <script>
