--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
         <div class="d-inline-flex">
             <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-1"><i class="bi bi-github"></i> GitHub</a>
             <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-warning m-1"><i class="bi bi-bug-fill"></i> Report a Bug</a>
-            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-success m-1"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
+            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-success m-1 btn-mobile"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
         </div>
         <div>
-            <a href="https://www.binance.com/en/trade/DOGE_USDT" target="_blank" rel="noopener" class="btn btn-info m-1 text-white" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sponsored"><i class="bi bi-currency-bitcoin"></i> Buy DogeCoin</a>
+            <a href="https://www.binance.com/en/trade/DOGE_USDT" target="_blank" rel="noopener" class="btn btn-info m-1 text-white btn-mobile" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sponsored"><i class="bi bi-currency-bitcoin"></i> Buy DogeCoin</a>
             <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i> Instagram</a>
         </div>
     </div>
