--- a/area.html
+++ b/area.html
@@ -171,7 +171,7 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
         <div class="center-form">
-            <input type="number" id="squareside" placeholder="side" class="form-control mb-0" step="0.01" />
+            <input type="number" id="squareside" placeholder="side" class="form-control mb-0" step="0.01" min="0"/>
         </div>
         <br>
         <div class="center-form">
@@ -190,11 +190,11 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
         <div class="center-form">
-            <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" />
+            <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
-            <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.01" />
+            <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
@@ -213,11 +213,11 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
         <div class="center-form">
-            <input type="number" id="tria" placeholder="segment" class="form-control mb-0" step="0.01" />
+            <input type="number" id="tria" placeholder="segment" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
-            <input type="number" id="trib" placeholder="corresponding height" class="form-control mb-0" step="0.01" />
+            <input type="number" id="trib" placeholder="corresponding height" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
@@ -236,7 +236,7 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
         <div class="center-form">
-            <input type="number" id="etris" placeholder="side" class="form-control mb-0" step="0.01" />
+            <input type="number" id="etris" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
@@ -255,7 +255,7 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
         <div class="center-form">
-            <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" />
+            <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
@@ -274,15 +274,15 @@
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-pentagon"></i> Trapezoid</h4>
             <div class="center-form">
-                <input type="number" id="trapa" placeholder="small segment" class="form-control mb-0" step="0.01" />
+                <input type="number" id="trapa" placeholder="small segment" class="form-control mb-0" step="0.01" min="0" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="trapb" placeholder="large segment" class="form-control mb-0" step="0.01" />
+                <input type="number" id="trapb" placeholder="large segment" class="form-control mb-0" step="0.01 min="0"" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="trapc" placeholder="height" class="form-control mb-0" step="0.01" />
+                <input type="number" id="trapc" placeholder="height" class="form-control mb-0" step="0.01" min="0" />
             </div>
             <br>
             <div class="center-form">
