--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -169,7 +169,7 @@
         <form autocomplete="off">
             <h4 class="text-white">Square</h4>
             <div class="center-form">
-                <input type="number" id="sside" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
+                <input type="number" id="sside" placeholder="side" class="form-control mb-0" min="0" />
             </div>
             <br>
             <div class="center-form">
@@ -188,7 +188,7 @@
         <form autocomplete="off">
             <h4 class="text-white">Number of Diagonals in a Convex Polygon</h4>
             <div class="center-form">
-                <input type="number" id="vertex" placeholder="enter the number of vertices" class="form-control mb-0" step="0.01" min="4" />
+                <input type="number" id="vertex" placeholder="enter the number of vertices" class="form-control mb-0" min="4" />
             </div>
             <br>
             <div class="center-form">
