--- a/perimeter.html
+++ b/perimeter.html
@@ -171,7 +171,7 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
         <div class="center-form">
-            <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.01" />
+            <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
@@ -190,11 +190,11 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
         <div class="center-form">
-            <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" />
+            <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
-            <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.01" />
+            <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
@@ -213,15 +213,15 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
         <div class="center-form">
-            <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.01" />
+            <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
-            <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.01" />
+            <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
-            <input type="number" id="tric" placeholder="third side" class="form-control mb-0" step="0.01" />
+            <input type="number" id="tric" placeholder="third side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
@@ -240,7 +240,7 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
         <div class="center-form">
-            <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.01" />
+            <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
@@ -259,7 +259,7 @@
         <form autocomplete="off">
         <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
         <div class="center-form">
-            <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" />
+            <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br>
         <div class="center-form">
