--- a/canvas.html
+++ b/canvas.html
@@ -164,8 +164,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">(DEV) Canvas Drawing</h1>
-        <hr class="bg-danger" style="width: 60%;" />
+        <h1 class="text-white my-4">(DEV) Canvas Drawing</h1>
         <canvas id="canvas" class="rounded" width="600px" height="600px" style="border: 4px solid var(--bs-danger);"></canvas>
     </div>
     <!-- SCRIPTS START -->
