--- a/stats.html
+++ b/stats.html
@@ -170,8 +170,8 @@
     <div class="container-sm">
         <h1 class="text-white">Your Statistics</h1>
         <hr class="bg-danger" />
-        <button class="btn btn-success me-3 mb-3" onclick="loadStats()">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
-        <button class="btn btn-danger me-3 mb-3" onclick="clearStats()">Reset Stats <i class="bi bi-trash-fill"></i></button>
+        <button class="btn btn-success me-3 mb-3" onclick="loadStats()" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Refresh your statistics count">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
+        <button class="btn btn-danger me-3 mb-3" onclick="clearStats()" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Delete all your statistics">Reset Stats <i class="bi bi-trash-fill"></i></button>
         <p class="text-white">Total Visits: <span id="page-views"></span></p>
         <p class="text-white">Total Statistics Page Views: <span id="stat-views"></span></p>
         <p class="text-white">Total Equations Solved: <span id="equations-solved"></span></p>
@@ -184,6 +184,12 @@
     <script src="dist/SignOut.js"></script>
     <script src="dist/OnSignOut.js"></script>
     <script src="dist/stats.js"></script>
+    <script>
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+    </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
