--- a/tos.html
+++ b/tos.html
@@ -168,17 +168,16 @@
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
         <p>Your privacy is important to us. It is MathFlare&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other sites we own and operate. </p>
-        <p>This policy is effective as of 20 April 2021 and was last updated on 23 May 2021.</p>
+        <p>This policy is effective as of 20 April 2021 and was last updated on 28 June 2021.</p>
         </section>
         <section id="info-we-collect">
         <h3>Information We Collect</h3>
-        <p>Information we collect includes both information you knowingly and actively provide us when using or participating in any of our services and promotions, and any information automatically sent by your devices in the course of accessing our products and services. </p>
-        <p>Please note that we use third-party services in our website such as Google OAuth(LogIn with Google) and PostMail. By using our website you knowingly agree with their Terms of Service as well.</p>
+        <p>We do not collect any information from you</p>
         <table class="table table-bordered text-white">
             <thead>
                 <tr>
                     <th>Category</th>
-                    <th>Collected*</th>
+                    <th>Locally Stored*</th>
                 </tr>
             </thead>
             <tbody>
@@ -188,14 +187,6 @@
                 </tr>
                 <tr>
                     <td>Usage statistics across the website</td>
-                    <td>Yes</td>
-                </tr>
-                <tr>
-                    <td>LogIn's</td>
-                    <td>Yes</td>
-                </tr>
-                <tr>
-                    <td>LogOut's</td>
                     <td>Yes</td>
                 </tr>
                 <tr>
@@ -213,41 +204,20 @@
         </section>
         <section id="security-of-data">
         <h4>Security of Your Personal Information</h4>
-        <p>We do not store or process any of your personal information. Everything happens in your browser</p>
-        <p>Although we will do our best to protect the personal information you provide to us, we advise that no method of electronic transmission or storage is 100% secure, and no one can guarantee absolute data security. We will comply with laws applicable to us in respect of any data breach. </p>
-        <p>You are responsible for selecting any password and its overall security strength, ensuring the security of your own information within the bounds of our services. </p>
+        <p>Since we do not collect or process any of your personal information, you don't have to worry about the security of your personal information</p>
         </section>   
         </section>
         <section id="childrens-privacy">
         <h3>Children’s Privacy</h3>
-        <p>We aim our product at children under the age of 13, and we do not knowingly collect personal information about children under 13. </p>
+        <p>We do aim our product at children under the age of 13, and we do not knowingly collect personal information about children under 13 or about anyone to be honest</p>
         </section>
         <section id="disclosure-of-personal-info-to-third-party">
         <h3>Disclosure of Personal Information to Third Parties</h3>
-        <p>We may disclose personal information to: </p>
-        <ul>
-            <li>a parent, subsidiary, or affiliate of our company</li>
-            <li>third party service providers for the purpose of enabling them to provide their services, for example, IT service providers, data storage, hosting and server providers, advertisers, or analytics platforms</li>
-            <li>our employees, contractors, and/or related entities</li>
-            <li>our existing or potential agents or business partners</li>
-            <li>sponsors or promoters of any competition, sweepstakes, or promotion we run</li>
-            <li>courts, tribunals, regulatory authorities, and law enforcement officers, as required by law, in connection with any actual or prospective legal proceedings, or in order to establish, exercise, or defend our legal rights</li>
-            <li>third parties, including agents or sub-contractors, who assist us in providing information, products, services, or direct marketing to you third parties to collect and process data</li>
-        </ul>
-        </section>
-        <section id="itpi">
-        <h3>International Transfers of Personal Information</h3>
-        <p>The personal information we collect is stored and/or processed where we or our partners, affiliates, and third-party providers maintain facilities. Please be aware that the locations to which we store, process, or transfer your personal information may not have the same data protection laws as the country in which you initially provided the information. If we transfer your personal information to third parties in other countries: (i) we will perform those transfers in accordance with the requirements of applicable law; and (ii) we will protect the transferred personal information in accordance with this privacy policy. </p>
-        <h3>Your Rights and Controlling Your Personal Information</h3>
-        <p>You always retain the right to withhold personal information from us, with the understanding that your experience of our website may be affected. We will not discriminate against you for exercising any of your rights over your personal information. If you do provide us with personal information you understand that we will collect, hold, use and disclose it in accordance with this privacy policy. You retain the right to request details of any personal information we hold about you. </p>
-        <p>If we receive personal information about you from a third party, we will protect it as set out in this privacy policy. If you are a third party providing personal information about somebody else, you represent and warrant that you have such person’s consent to provide the personal information to us. </p>
-        <p>If you have previously agreed to us using your personal information for direct marketing purposes, you may change your mind at any time. We will provide you with the ability to unsubscribe from our email-database or opt out of communications. Please be aware we may need to request specific information from you to help us confirm your identity. </p>
-        <p>If you believe that any information we hold about you is inaccurate, out of date, incomplete, irrelevant, or misleading, please contact us using the details provided in this privacy policy. We will take reasonable steps to correct any information found to be inaccurate, incomplete, misleading, or out of date. </p>
-        <p>If you believe that we have breached a relevant data protection law and wish to make a complaint, please contact us using the details below and provide us with full details of the alleged breach. We will promptly investigate your complaint and respond to you, in writing, setting out the outcome of our investigation and the steps we will take to deal with your complaint. You also have the right to contact a regulatory body or data protection authority in relation to your complaint. </p>
+        <p>We do not knowingly disclose your personal information to anyone</p>
         </section>
         <section id="cookies">
         <h3>Use of Cookies</h3>
-        <p>We use &ldquo;cookies&rdquo; to collect information about you and your activity across our site. A cookie is a small piece of data that our website stores on your computer, and accesses each time you visit, so we can understand how you use our site. This helps us serve you content based on preferences you have specified. </p>
+        <p>We use &ldquo;cookies&rdquo; to locally store information about you and your activity across our site inside your browser. A cookie is a small piece of data that our website stores on your computer, and accesses each time you visit, so we can understand how you use our site. This helps us serve you content based on preferences you have specified. </p>
         <h3>Limits of Our Policy</h3>
         <p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and policies of those sites, and cannot accept responsibility or liability for their respective privacy practices. </p>
         </section>
@@ -269,7 +239,7 @@
         </p>
         <p>
             Corporation<br />
-            liquid-geometry@dkatsios.tk
+            mathflare@dkatsios.tk
         </p>
         <p>Or use our <a href="contact.html">Contact Form</a></p>
         </section>
