improved linear sys solver and percentage calc and added round numsto the navbar

--- a/equations.html
+++ b/equations.html
@@ -148,6 +148,7 @@
                         <a href="pow.html" class="dropdown-item"><i class="bi bi-power"></i> Exponents(powers)</a>
                         <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
                         <a href="percent.html" class="dropdown-item"><i class="bi bi-percent"></i> Percentage Calculator</a>
+                        <a href="round.html" class="dropdown-item"><i class="bi bi-arrows-expand"></i> Round Numbers</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Equations</h5>
                         <a href="equations.html" class="dropdown-item aactive"><i class="bi bi-percent"></i> 1st Degree</a>
