--- a/percent.html
+++ b/percent.html
@@ -148,6 +148,7 @@
                         <a href="pow.html" class="dropdown-item"><i class="bi bi-power"></i> Exponents(powers)</a>
                         <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
                         <a href="percent.html" class="dropdown-item aactive"><i class="bi bi-percent"></i> Percentage Calculator</a>
+                        <a href="round.html" class="dropdown-item"><i class="bi bi-arrows-expand"></i> Round Numbers</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Equations</h5>
                         <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
@@ -231,6 +232,66 @@
         <br />
         <div style="max-height: 1em;">
             <p class="text-success" id="output3"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+percentage+difference" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+        </div>
+        <hr class="bg-danger" style="width: 50%;" />
+        <form autocomplete="off">
+        <h4 class="text-white">Value after discount</h4>
+        <div class=" center-form">
+            <select class="form-select center-form" id="select">
+                <option value="inc">Increase</option>
+                <option value="dec">Decrease</option>
+            </select>
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="number" id="init4" placeholder="initial value" class="form-control mb-0" step="0.01"/>
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="number" id="disc4" placeholder="%discount" class="form-control mb-0" step="0.01" />
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="submit" id="button4" class="btn btn-success btn-lg" value="Calculate">
+        </div>
+        </form>
+        <br />
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output4"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+percentage+difference" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+        </div>
+        <hr class="bg-danger" style="width: 50%;" />
+        <form autocomplete="off">
+        <h4 class="text-white">Value before discount</h4>
+        <div class=" center-form">
+            <select class="form-select center-form" id="select2">
+                <option value="inc">Increase</option>
+                <option value="dec">Decrease</option>
+            </select>
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="number" id="fin5" placeholder="final value" class="form-control mb-0" step="0.01"/>
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="number" id="disc5" placeholder="%discount" class="form-control mb-0" step="0.01" />
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="submit" id="button5" class="btn btn-success btn-lg" value="Calculate">
+        </div>
+        </form>
+        <br />
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output5"></p>
         </div>
         <br>
         <div class="my-4">
