--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -189,7 +189,7 @@
         <form autocomplete="off">
             <h4 class="text-white">Number of Diagonals in a Convex Polygon</h4>
             <div class="center-form">
-                <input type="number" id="vertex" placeholder="enter the number of vertices" class="form-control mb-0" min="4" />
+                <input type="number" id="vertex" placeholder="number of vertices" class="form-control mb-0" min="4" />
             </div>
             <br>
             <div class="center-form">
